Added missing command into ci script [skip deploy]

--- a/pages/index.html
+++ b/pages/index.html
@@ -43,7 +43,7 @@
         <div class="inner">
             <nav class="nav nav-masthead justify-content-center">
                 <a class="nav-link active" href="#">Home</a>
-                <a class="nav-link" href="hikari">Documentation</a>
+                <a class="nav-link" href="hikari/index.html">Documentation</a>
                 <a class="nav-link" href="https://gitlab.com/nekokatt/hikari">GitLab</a>
                 <a class="nav-link" href="https://pypi.org/project/hikari">PyPI</a>
             </nav>
@@ -53,7 +53,7 @@
     <main role="main" class="inner cover">
         <h1 class="display-1">
             <small>pip install --pre</small><br/>
-            Hikari
+            hikari
         </h1>
         <p class="lead">A new, powerful, sane Python API for writing Discord bots.</p>
         <p>
