Fix pages links for coverage and to account temporarily removing master docs all together.
* Have search bar use link for docs rather than landing page link to avoid overlap between staging and master search.

--- a/pages/index.html
+++ b/pages/index.html
@@ -53,7 +53,7 @@
                        aria-haspopup="true" aria-expanded="false">Reports for this build</a>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" href="pytest.html">Test report</a>
-                        <a class="dropdown-item" href="coverage/index.html">Coverage report</a>
+                        <a class="dropdown-item" href="coverage/html/index.html">Coverage report</a>
                         <a class="dropdown-item" href="pylint.html">Lint report</a>
                     </div>
                 </li>
