--- a/pages/index.html
+++ b/pages/index.html
@@ -142,7 +142,7 @@
         </p>
         <br/>
         <p class="lead">
-            <a class="btn btn-lg" href="https://discord.gg/HMnGbsv">Slide into our server</a>
+            <a class="btn btn-lg" href="https://discord.gg/Jx4cNGG">Slide into our server</a>
         </p>
     </main>
 
