Implemented pdoc3 bootstrap template from scratch.
Function layout and CSS tweaks.

Removed old mako source for docs.

--- a/pages/index.html
+++ b/pages/index.html
@@ -21,27 +21,26 @@
      | along with Hikari. If not, see <https://www.gnu.org/licenses/>.
      !-->
     <link rel="shortcut icon" type="image/png"
-          href="https://assets.gitlab-static.net/uploads/-/system/project/avatar/12050696/Hikari-Logo_1.png"/>
-    <meta property="og:title" content="Hikari.py"/>
-    <meta property="og:type" content="website"/>
+        href="https://assets.gitlab-static.net/uploads/-/system/project/avatar/12050696/Hikari-Logo_1.png" />
+    <meta property="og:title" content="Hikari.py" />
+    <meta property="og:type" content="website" />
     <meta property="og:image"
-          content="https://assets.gitlab-static.net/uploads/-/system/project/avatar/12050696/Hikari-Logo_1.png"/>
+        content="https://assets.gitlab-static.net/uploads/-/system/project/avatar/12050696/Hikari-Logo_1.png" />
     <meta property="og:description"
-          content="A Discord Bot framework for modern Python and asyncio built on good intentions"/>
-    <meta property="theme-color" content="#ff029a"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <meta charset="utf-8"/>
+        content="A Discord Bot framework for modern Python and asyncio built on good intentions" />
+    <meta property="theme-color" content="#ff029a" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta charset="utf-8" />
     <title>Hikari.py</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"/>
-    <link rel="stylesheet"
-      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.0.1/styles/default.min.css">
-    <link rel="stylesheet" href="site.css"/>
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.0.1/styles/default.min.css">
+    <link rel="stylesheet" href="site.css" />
 </head>
 
 <body>
 
-<pre class="background-only">
+    <pre class="background-only">
     <code class="python">
         #!/usr/bin/env python
         # -*- coding: utf-8 -*-
@@ -98,70 +97,71 @@
     </code>
 </pre>
 
-<div class="cover-container d-flex h-100 p-3 mx-auto flex-column text-center" id="main-content">
-    <header class="masthead mb-auto">
-        <div class="inner">
-            <ul class="nav justify-content-center">
-                <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="hikari/index.html">Documentation</a></li>
-                <li class="nav-item"><a class="nav-link" href="https://gitlab.com/nekokatt/hikari">GitLab</a></li>
-                <li class="nav-item"><a class="nav-link" href="https://pypi.org/project/hikari">PyPI</a></li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
-                       aria-haspopup="true" aria-expanded="false">Reports for this build</a>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" href="coverage/html/index.html">Coverage report</a>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </header>
+    <div class="cover-container d-flex h-100 p-3 mx-auto flex-column text-center" id="main-content">
+        <header class="masthead mb-auto">
+            <div class="inner">
+                <ul class="nav justify-content-center">
+                    <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="hikari/index.html">Documentation</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://gitlab.com/nekokatt/hikari">GitLab</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://pypi.org/project/hikari">PyPI</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button"
+                            aria-haspopup="true" aria-expanded="false">Reports for this build</a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="coverage/html/index.html">Coverage report</a>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </header>
 
-    <main role="main" class="inner cover">
-        <h1 class="display-1">
-            <small>pip install --pre</small><br/>
-            hikari
-        </h1>
-        <p class="lead">A new, powerful, sane Python API for writing Discord bots.</p>
-        <p>
-            This API is still in a pre-alpha state, and is a <strong>work in progress</strong>! Features may change
-            or undergo improvements before the design is finalized. Until then, why not join our Discord? Feel free
-            to drop in to ask questions, get updates on progress, and be able to provide valuable contributions and
-            feedback.
-        </p>
-        <p>
-            Tutorials, tips, and additional resources will come soon!
-        </p>
-        <br/>
-        <p class="lead">
-            <a class="btn btn-lg" href="https://discord.gg/Jx4cNGG">Slide into our server</a>
-        </p>
-    </main>
+        <main role="main" class="inner cover">
+            <h1 class="display-1">
+                <small>pip install --pre</small><br />
+                hikari
+            </h1>
+            <p class="lead">A new, powerful, sane Python API for writing Discord bots.</p>
+            <p>
+                This API is still in a pre-alpha state, and is a <strong>work in progress</strong>! Features may change
+                or undergo improvements before the design is finalized. Until then, why not join our Discord? Feel free
+                to drop in to ask questions, get updates on progress, and be able to provide valuable contributions and
+                feedback.
+            </p>
+            <p>
+                Tutorials, tips, and additional resources will come soon!
+            </p>
+            <br />
+            <p class="lead">
+                <a class="btn btn-lg" href="https://discord.gg/Jx4cNGG">Slide into our server</a>
+            </p>
+        </main>
 
-    <footer class="mastfoot mt-auto">
-        <div class="inner">
-            &copy; 2019-2020, Nekoka.tt
-        </div>
-    </footer>
-</div>
+        <footer class="mastfoot mt-auto">
+            <div class="inner">
+                &copy; 2019-2020, Nekoka.tt
+            </div>
+        </footer>
+    </div>
 
 
-<script src="https://code.jquery.com/jquery-3.5.0.min.js"
+    <script src="https://code.jquery.com/jquery-3.5.0.min.js"
         integrity="sha256-xNzN2a4ltkB44Mc/Jz3pT4iU1cmeR0FkXs4pru/JxaQ=" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.0.1/highlight.min.js"></script>
-<script>
-    hljs.initHighlightingOnLoad();
-    $(document).ready(function () {
-        $("header").fadeIn(1500);
-        $("main").fadeIn(1500);
-        $("footer").fadeIn(1500);
-    });
-</script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.0.1/highlight.min.js"></script>
+    <script>
+        hljs.initHighlightingOnLoad();
+        $(document).ready(function () {
+            $("header").fadeIn(1500);
+            $("main").fadeIn(1500);
+            $("footer").fadeIn(1500);
+        });
+    </script>
 </body>
+
 </html>
