--- a/pages/index.html
+++ b/pages/index.html
@@ -31,7 +31,7 @@
     <meta property="theme-color" content="#ff029a" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta charset="utf-8" />
-    <title>Hikari.py</title>
+    <title>Hikari</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/10.0.1/styles/default.min.css">
@@ -46,52 +46,50 @@
         # -*- coding: utf-8 -*-
         import asyncio
         import functools
-        import logging
         import os
 
         import hikari
+        from hikari.events.message import MessageCreateEvent
 
-        logging.basicConfig(level="INFO")
-
-        bot = hikari.StatelessBot(token=os.environ["BOT_TOKEN"])
+        bot = hikari.Bot(token=os.environ["BOT_TOKEN"])
 
         def command(name):
             def decorator(fn):
                 @functools.wraps(fn)
                 async def wrapper(event):
-                    if not event.author.is_bot and event.content.startswith(name):
+                    if not event.message.author.is_bot and event.message.content.startswith(name):
                         await fn(event)
                 return wrapper
             return decorator
 
-        @bot.event()
+        @bot.listen()
         @command("hk.ping")
-        async def ping(message: hikari.MessageCreateEvent) -> None:
-            await event.reply(content="Pong!")
+        async def ping(message: MessageCreateEvent) -> None:
+            await event.message.reply("Pong!")
 
         @bot.event()
         @command("hk.add")
-        async def add_numbers(message: hikari.MessageCreateEvent) -> None:
-            await event.reply(content="Please enter the first number")
+        async def add_numbers(event: MessageCreateEvent) -> None:
+            await event.message.reply("Please enter the first number")
 
-            def is_number_check(event):
-                return event.author == message.author and message.content.isdigit()
+            def is_number_check(e):
+                return event.message.author == e.message.author and e.message.content.isdigit()
 
             try:
-                m1 = await bot.wait_for(hikari.MessageCreateEvent, predicate=is_number_check, timeout=30)
-                await bot.rest.create_message(message.channel_id, content="Please enter the second number")
-                m2 = await bot.wait_for(hikari.MessageCreateEvent, predicate=is_number_check, timeout=30)
+                e1 = await bot.wait_for(MessageCreateEvent, predicate=is_number_check, timeout=30)
+                await bot.rest.create_message(event.message.channel_id, content="Please enter the second number")
+                e2 = await bot.wait_for(MessageCreateEvent, predicate=is_number_check, timeout=30)
 
             except asyncio.TimeoutError:
-                await event.reply("You took too long...")
+                await event.message.reply("You took too long...")
 
             else:
-                val1 = int(m1.content)
-                val2 = int(m2.content)
+                val1 = int(e1.message.content)
+                val2 = int(e2.message.content)
 
                 embed = hikari.Embed(title="Result!", description=f"{val1} + {val2}" color="#3f3")
 
-                await event.reply(embed=embed)
+                await event.message.reply(embed=embed)
 
         bot.run()
     </code>
@@ -119,9 +117,9 @@
         <main role="main" class="inner cover">
             <h1 class="display-1">
                 <small>pip install --pre</small><br />
-                hikari
+                hikari[speedups]
             </h1>
-            <p class="lead">A new, powerful, sane Python API for writing Discord bots.</p>
+            <p class="lead">A new, powerful, static-typed Python API for writing Discord bots.</p>
             <p>
                 This API is still in a pre-alpha state, and is a <strong>work in progress</strong>! Features may change
                 or undergo improvements before the design is finalized. Until then, why not join our Discord? Feel free
