HTTP pattern tidyup
- Removed http_client.py
- Split http_settings into proxy and http settings
- Removed connector option to make settings pickleable
- Made gateway and rest manage their own client sessions
- Made gateways reserve a single connection in a pool rather than
    reserving like 100 pooled connections for no reason.
- Removed implicit http proxy basicauth and provided custom implementation
- Provided custom timeout management settings.
- Updated docs.
- Moved iterators to a separate file.
- Fixed other minor buglets.

Added some more stream ops.

Amended issues with crypto false pos.

Amended typehints in iterators.py

Moved files back to right place.

--- a/pages/index.html
+++ b/pages/index.html
@@ -117,7 +117,7 @@
         <main role="main" class="inner cover">
             <h1 class="display-1">
                 <small>pip install --pre</small><br />
-                hikari[speedups]
+                hikari
             </h1>
             <p class="lead">A new, powerful, static-typed Python API for writing Discord bots.</p>
             <p>
