Fixed logo in documentation

--- a/pages/index.html
+++ b/pages/index.html
@@ -20,10 +20,10 @@
      | You should have received a copy of the GNU Lesser General Public License
      | along with Hikari. If not, see <https://www.gnu.org/licenses/>.
      !-->
-    <link rel="shortcut icon" type="image/png" href="/logo.png" />
+    <link rel="shortcut icon" type="image/png" href="https://nekokatt.gitlab.io/hikari/logo.png" />
     <meta property="og:title" content="Hikari.py" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/logo.png" />
+    <meta property="og:image" content="https://nekokatt.gitlab.io/hikari/logo.png" />
     <meta property="og:description"
         content="A Discord Bot framework for modern Python and asyncio built on good intentions" />
     <meta property="theme-color" content="#ff029a" />
